--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@reduxjs/toolkit": "^2.11.2",
     "@supabase/supabase-js": "^2.57.4",
     "lucide-react": "^0.344.0",
+    "motion": "^12.23.26",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "tailwind": "^4.0.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
